src/test/custom/invalid/overload/overloadNull.wacc
# Output:
# #semantic error#

# Program:

begin
  int foo(pair(bool, bool) b) is return 1 end
  int foo(pair(int, int) a) is return 1 end

  int x = call foo(null)
end